# monorepo

./: .editorconfig  .envrc  .gitignore  .mise.toml  .miserc.toml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  Brewfile  Brewfile.lock.json  LICENSE  README.md  dodo.py  done.txt  mise.dev.toml  pyproject.toml  renovate.json5  todo.txt
.config/: dotnet-tools.json
.github/actions/tofu-deploy/: action.yaml
.github/actions/tofu-plan/: action.yaml
.github/workflows/: build.yaml  cd.yaml  ci.yaml  cicd.yaml  lint.yaml  renovate.yaml
.mise/: setup.sh
.mise/tasks/: dbshell  ls
docs/: architecture-config-secrets-cicd.md  node-pool-migration-runbook.md  right-sizing-resources.md
fsharp/api/AutoMate/: Program.fs  docker-compose.yaml
fsharp/api/automate/: .envrc  .mise.toml  AutoMate.fsproj  AutoMate.sln  Dockerfile  Integrations.Todoist.fs  Program.fs  README.md  Scratch.fsx  Todoist.fs  docker-compose.yaml  dodo.py
fsharp/api/musync/: .mise.toml  Dockerfile  Musync.sln  README.md  docker-compose.yaml
fsharp/integration/TodoistLogseqIntegration/: .dockerignore  Dockerfile  Program.fs  README.md  TodoistLogseqIntegration.fsproj  docker-compose.yaml  dodo.py
hcl/: .gitignore
hcl/infrastructure/: Brewfile.lock.json  Justfile  README.md  example.env
hcl/infrastructure/frankencluster/: .terraform.lock.hcl  README.md  cert_manager.tf  certificates.tf  dashboard.tf  dodo.py  external_dns.tf  gateway.tf  httpbin.tf  main.tf  nginx_gateway.tf  prometheus_operator.tf  staging.tf  variables.tf
hcl/infrastructure/frankenstructure/: .pre-commit-config.yaml  .terraform.lock.hcl  Brewfile  README.md  clustered.tf  dodo.py  vultr.tf
python/pipeline/frankenbot/: .mise.toml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  repos.yaml
python/pipeline/frankenbot/agent-skills/: CLAUDE.md  frankenbot.md
python/pipeline/frankenbot/frankenbot/: __init__.py  autonomy.py  backlog.py  classifier.py  cli.py  config.py  discovery.py  dispatch.py  githubapp.py  otel.py  state.py  triage.py
python/pipeline/frankenbot/tests/: __init__.py  test_autonomy.py  test_backlog.py  test_classifier.py  test_discovery.py  test_dispatch.py  test_state.py  test_triage.py
terraform/: README.md
terraform/applications/: README.md
terraform/applications/frankenbot/: .mise.toml  .terraform.lock.hcl  configmaps.tf  cronjob_dispatcher.tf  databases.tf  external_secret_anthropic.tf  external_secret_anthropic.yaml  external_secret_github_app.tf  external_secret_github_app.yaml  jobs.tf  limitrange.tf  locals.tf  main.tf  namespaces.tf  rbac.tf  resourcequota.tf  secrets.tf  variables.tf
terraform/applications/httpbin/: .terraform.lock.hcl  README.md  helm.tf  httpbin.tf  locals.tf  main.tf  namespaces.tf  probes.tf  removed.tf  routes.tf  variables.tf
terraform/applications/miniflux/: .terraform.lock.hcl  databases.tf  external_secret_miniflux.tf  external_secret_miniflux.yaml  helm.tf  locals.tf  main.tf  namespaces.tf  probes.tf  routes.tf  variables.tf
terraform/applications/n8n/: .terraform.lock.hcl  README.md  helm.tf  locals.tf  main.tf  n8n.tf  routes.tf
terraform/applications/node-red/: README.md  node-red.tf
terraform/applications/ntfy/: .terraform.lock.hcl  README.md  helm.tf  locals.tf  main.tf  namespaces.tf  routes.tf  variables.tf
terraform/applications/ollama/: locals.tf  main.tf  namespaces.tf  ollama.tf  probes.tf  routes.tf
terraform/applications/windmill/: .terraform.lock.hcl  databases.tf  init-db-as-superuser.sql  locals.tf  main.tf  monitors.tf  namespaces.tf  probes.tf  routes.tf  secrets.tf  variables.tf  windmill.tf
terraform/infrastructure/external-secrets/: .terraform.lock.hcl  README.md  cluster_secret_store.tf  cluster_secret_store.yaml  helm.tf  locals.tf  main.tf  namespaces.tf  secrets.tf  variables.tf
terraform/infrastructure/frankencluster/: .terraform.lock.hcl  README.md  cert_manager.tf  dodo.py  external_dns.tf  httpbin.tf  main.tf  nginx_gateway.tf  prometheus_operator.tf  routes.tf  variables.tf
terraform/infrastructure/frankenstructure/: .mise.toml  .terraform.lock.hcl  README.md  cloudflare.tf  cloudflare_dns_derekmfrank_com.tf  cloudflare_dns_frank_sh.tf  cloudflare_dns_noiseless_news.tf  cloudflare_dns_petiquette_dog.tf  cloudflare_dns_petiquette_training.tf  dodo.py  http.tf  locals.tf  main.tf  variables.tf  vultr.tf  vultr_databases.tf  vultr_kubernetes.tf  vultr_storage.tf  vultr_vpc.tf
terraform/infrastructure/gateway/: .mise.toml  .terraform.lock.hcl  README.md  cert_manager.tf  certificates.tf  cluster_issuers.tf  crds.tf  dodo.py  external_dns.tf  gateways.tf  helm.tf  locals.tf  main.tf  monitors.tf  namespaces.tf  nginx_gateway.tf  nginx_proxies.tf  probes.tft  roles.tf  routes.tf  secrets.tf  variables.tf
terraform/infrastructure/monitoring/: .terraform.lock.hcl  README.md  alertmanager_configs.tf  blackbox_exporter.tf  configmaps.tf  databases.tf  dodo.py  healthchecks_io.tf  helm.tf  kube_prometheus_stack.tf  locals.tf  main.tf  probes.tf  prometheus_exporters.tf  prometheus_rules.tf  roles.tf  routes.tf  secrets.tf  variables.tf
terraform/infrastructure/observability/: .terraform.lock.hcl  README.md  alerts.tf  base_collector.tf  cluster_collector.tf  collectors.tf  daemon_collector.tf  external_secret_grafana_cloud.tf  external_secret_grafana_cloud.yaml  grafana_alerts.tf  grafana_dashboards.tf  healthchecks_io.tf  helm.tf  honeycomb_alerts.tf  honeycomb_boards.tf  honeycombio_api_keys.tf  honeycombio_environments.tf  instrumentations.tf  locals.tf  main.tf  namespaces.tf  scrape_collector.tf  scrape_collector_rbac.tf  secrets.tf  variables.tf
terraform/modules/blackbox-probe/: main.tf  probes.tf  variables.tf
terraform/modules/gateway-route/: locals.tf  observability.tf  outputs.tf  routes.tf  variables.tf
terraform/modules/service-monitor/: monitors.tf  variables.tf
terraform/modules/vultr-managed-postgres/: jobs.tf  (+7 more)
terraform/scripts/: probe-conditional-writes.py
(+135 files in other folders)
